2009-02-03  DJ Delorie  <dj@redhat.com>

	* cpu/mep-core.cpu: Update to new MeP configuration.
	* cpu/mep-ext-cop.cpu: Likewise.
	* cpu/mep.opc: Likewise.

2008-12-23  Frank Ch. Eigler  <fche@redhat.com>

	* sim.scm (-op-gen-queued-write): Add needed symbol->string.

2008-06-17  Dave Brolley  <brolley@redhat.com>

	* cpu/xstormy16.cpu (h-pc): Add a set handler.
	(h-gr): Likewise.

2007-11-13  Dave Brolley  <brolley@redhat.com>

	* cgen-intrinsics.scm (load-files): Remove reference to fixup.scm.

2007-11-05  Dave Brolley  <brolley@redhat.com>

        * intrinsics.scm,cgen-intrinsics.scm: New application which
	generates code to support intrinsic functions for insns in the
	mep architecture in gcc.

2007-09-21  Dave Brolley  <brolley@redhat.com>

	* cpu/mep-core.cpu (rnc, rnuc, rns, rnus, rn3c, rn3uc, rn3s) 
	(rn3us): CDATA attribute now LONG.
	
2007-08-21  Dave Brolley  <brolley@redhat.com>

	* rtl-c.scm (const): Generate call to MAKEDI for integers larger
	than 32 bits.

2007-07-05  Nick Clifton  <nickc@redhat.com>

	* utils.scm (copyright-fsf): Update copyright notice to refer to
	the GPL version 3.

2007-05-22  Nick Clifton  <nickc@redhat.com>

	* doc/cgen.texi: Use @copying around the copyright notice.
	* doc/internals.texi: Likewise.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* *mep*: New cpu description for Toshiba Media Processor (MeP).

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* opc-asmdis.scm (-gen-init-asm-fn): Include CGEN_ASM_INIT_HOOK
	in the generated code for @arch@_cgen_init_asm if it is defined.

	* Contribute the following changes:
	2005-04-05  Richard Sandiford  <rsandifo@redhat.com>

	* attr.scm (<string-attribute>): New attribute class.
	(attr-kind): Handle <string-attribute>.
	(parse-simple-attribute): New function.
	(<boolean-attribute> 'parse-value): Use parse-simple-attribute.
	(<bitset-attribute> 'parse-value): Likewise.
	(<boolean-attribute> 'parse-value): Likewise.
	(<enum-attribute> 'parse-value): Likewise.