@@ -1,3 +1,8 @@
+2009-02-18  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* opc-itab.scm (<>_cgen_init_opcode_table): Avoid compiler warning
+	about calling memset with a zero length.
+
 2009-02-03  DJ Delorie  <dj@redhat.com>
 
 	* cpu/mep-core.cpu: Update to new MeP configuration.
